--- a/app/admin/view/user/password.html
+++ b/app/admin/view/user/password.html
@@ -1,4 +1,4 @@
-{extend name="public/base_xadmin" /}
+{extend name="public/base_xuser" /}
 {block name="title"}更改密码{/block}
 {block name="load"}
 <!-- css -->
@@ -21,7 +21,7 @@
                     6到50个字符
                 </div>
             </div>
-            <div class="layui-form-item">
+            <!-- <div class="layui-form-item">
                 <label for="L_password_confirm" class="layui-form-label">
                     <span class="x-red">*</span>确认密码
                 </label>
@@ -29,7 +29,7 @@
                     <input type="password" id="L_password_confirm" name="password_confirm" required=""
                         lay-verify="password_confirm" autocomplete="off" class="layui-input">
                 </div>
-            </div>
+            </div> -->
             <div class="layui-form-item">
                 <label for="" class="layui-form-label">
                 </label>
@@ -56,15 +56,15 @@
         // 自定义验证规则
         form.verify({
             password: [/(.+){6,50}$/, '密码必须6到50位'],
-            password_confirm: function (value) {
-                if ($('#L_password').val() != $('#L_password_confirm').val()) {
-                    return '两次密码不一致';
-                }
-            }
+            // password_confirm: function (value) {
+            //     if ($('#L_password').val() != $('#L_password_confirm').val()) {
+            //         return '两次密码不一致';
+            //     }
+            // }
         });
 
         // 更新数据
-        layui_ajax_update(form, '/admin/password', layer, false);
+        layui_ajax_update(form, '/user/password', layer, false);
 
     });
 </script>
