--- a/app/admin/view/home/index.html
+++ b/app/admin/view/home/index.html
@@ -135,7 +135,7 @@
         </div>
     </div>
     <script>
-        var showNode = ajax_list('/home');
+        var showNode = ajax_list('/admin/get_show_node');
         console.log(showNode);
 
         for (let value of showNode) {
