--- a/app/front/view/public/base.html
+++ b/app/front/view/public/base.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="{block name=" keywords"}俄罗斯海外仓、邮政小包、俄罗斯专线、海外仓、速卖通无忧线上仓、亚马逊FBA头程 、速卖通无忧物流、国际eub,
         英国专线、海外仓、广州小包、佛山小包、东莞小包、wish邮、荷兰邮政小包、广州eub、带电邮政小包、欧洲专线、俄罗斯cdek专线、美国专线、国际快递、中东专线、东南亚专线、ups快递、dhl快递、美国海加派、欧洲空加派、欧洲海加派、美国空加派{/block}">
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
     <link rel="canonical" href="{:url()}">
 
     <!-- css -->
