--- a/app/admin/view/home/welcome.html
+++ b/app/admin/view/home/welcome.html
@@ -1,4 +1,4 @@
-{extend name="public/base_layui" /}
+{extend name="public/base_xadmin" /}
 {block name="title"}欢迎页面{/block}
 {block name="load"}
 <!-- css -->
@@ -12,7 +12,8 @@
             <div class="layui-card">
                 <div class="layui-card-body ">
                     <blockquote class="layui-elem-quote">欢迎管理员：
-                        <span class="x-red">test</span>！当前时间:2018-04-25 20:50:53
+                        <span class="x-red" id="assign-username">神织知更</span>！当前时间: <span id="assign-date">
+                        </span>
                     </blockquote>
                 </div>
             </div>
@@ -20,56 +21,9 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-header">数据统计</div>
-                <div class="layui-card-body ">
-                    <ul class="layui-row layui-col-space10 layui-this x-admin-carousel x-admin-backlog">
-                        <li class="layui-col-md2 layui-col-xs6">
-                            <a href="javascript:;" class="x-admin-backlog-body">
-                                <h3>文章数</h3>
-                                <p>
-                                    <cite>66</cite>
-                                </p>
-                            </a>
-                        </li>
-                        <li class="layui-col-md2 layui-col-xs6">
-                            <a href="javascript:;" class="x-admin-backlog-body">
-                                <h3>会员数</h3>
-                                <p>
-                                    <cite>12</cite>
-                                </p>
-                            </a>
-                        </li>
-                        <li class="layui-col-md2 layui-col-xs6">
-                            <a href="javascript:;" class="x-admin-backlog-body">
-                                <h3>回复数</h3>
-                                <p>
-                                    <cite>99</cite>
-                                </p>
-                            </a>
-                        </li>
-                        <li class="layui-col-md2 layui-col-xs6">
-                            <a href="javascript:;" class="x-admin-backlog-body">
-                                <h3>商品数</h3>
-                                <p>
-                                    <cite>67</cite>
-                                </p>
-                            </a>
-                        </li>
-                        <li class="layui-col-md2 layui-col-xs6">
-                            <a href="javascript:;" class="x-admin-backlog-body">
-                                <h3>文章数</h3>
-                                <p>
-                                    <cite>67</cite>
-                                </p>
-                            </a>
-                        </li>
-                        <li class="layui-col-md2 layui-col-xs6 ">
-                            <a href="javascript:;" class="x-admin-backlog-body">
-                                <h3>文章数</h3>
-                                <p>
-                                    <cite>6766</cite>
-                                </p>
-                            </a>
-                        </li>
+                <div class="layui-card-body">
+                    <ul class="layui-row layui-col-space10 layui-this x-admin-carousel x-admin-backlog" id="count">
+
                     </ul>
                 </div>
             </div>
@@ -134,52 +88,9 @@
             <div class="layui-card">
                 <div class="layui-card-header">系统信息</div>
                 <div class="layui-card-body ">
-                    <table class="layui-table">
+                    <table class="layui-table" id="system">
                         <tbody>
-                            <tr>
-                                <th>xxx版本</th>
-                                <td>1.0.180420</td>
-                            </tr>
-                            <tr>
-                                <th>服务器地址</th>
-                                <td>x.xuebingsi.com</td>
-                            </tr>
-                            <tr>
-                                <th>操作系统</th>
-                                <td>WINNT</td>
-                            </tr>
-                            <tr>
-                                <th>运行环境</th>
-                                <td>Apache/2.4.23 (Win32) OpenSSL/1.0.2j mod_fcgid/2.3.9</td>
-                            </tr>
-                            <tr>
-                                <th>PHP版本</th>
-                                <td>5.6.27</td>
-                            </tr>
-                            <tr>
-                                <th>PHP运行方式</th>
-                                <td>cgi-fcgi</td>
-                            </tr>
-                            <tr>
-                                <th>MYSQL版本</th>
-                                <td>5.5.53</td>
-                            </tr>
-                            <tr>
-                                <th>ThinkPHP</th>
-                                <td>5.0.18</td>
-                            </tr>
-                            <tr>
-                                <th>上传附件限制</th>
-                                <td>2M</td>
-                            </tr>
-                            <tr>
-                                <th>执行时间限制</th>
-                                <td>30s</td>
-                            </tr>
-                            <tr>
-                                <th>剩余空间</th>
-                                <td>86015.2M</td>
-                            </tr>
+                            
                         </tbody>
                     </table>
                 </div>
@@ -199,7 +110,7 @@
                             </tr>
                             <tr>
                                 <th>开发者</th>
-                                <td>马志斌(113664000@qq.com)</td>
+                                <td>刘卡修(1131271533@qq.com)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -212,4 +123,36 @@
         </div>
     </div>
 </div>
+<script>
+    // 获取数据
+    let data = ajax_list('/home/welcome');
+    // console.log(data);
+
+    // 统计
+    data.count.forEach(function (value, index) {
+        $('#count').append(
+            '<li class="layui-col-md2 layui-col-xs6">'+
+                '<a href="javascript:;" class="x-admin-backlog-body">'+
+                    '<h3>'+ value[0] +'</h3>'+
+                    '<p>'+
+                        '<cite>'+ value[1] +'</cite>'+
+                    '</p>'+
+                '</a>'+
+            '</li>'
+        );
+    });
+
+    // 系统信息
+    data.system.forEach(function (value, index) {
+        $('#system tbody').append(
+            '<tr>'+
+                '<th>'+value[0]+'</th>'+
+                '<td>'+value[1]+'</td>'+
+            '</tr>'
+        );
+    });
+
+    // 赋值
+    assign(data);
+</script>
 {/block}
