--- a/app/front/view/index/index.html
+++ b/app/front/view/index/index.html
@@ -12,6 +12,7 @@
     slides(1);
     // 验证登录
 		// isApiLogin();
+    // $.get('http://www.ying.com/test', {}, function (res) {});
   </script>
   <!-- 会员登录 -->
   <div class="gzhl">
