--- a/app/front/view/index/index.html
+++ b/app/front/view/index/index.html
@@ -12,7 +12,9 @@
     slides(1);
     // 验证登录
 		// isApiLogin();
-    // $.get('http://www.ying.com/test', {}, function (res) {});
+    // 跨域测试
+    // $.get('http://www.ying.com/domain', {}, function (res) {});
+    // $.get('http://api.twe56.com/test', {}, function (res) {});
   </script>
   <!-- 会员登录 -->
   <div class="gzhl">
