--- a/app/front/view/index/index.html
+++ b/app/front/view/index/index.html
@@ -10,6 +10,19 @@
   <script>
     // 轮播图
     slides(1);
+    // $.ajax({
+    //     type: "GET",
+    //     contentType: "application/x-www-form-urlencoded",
+    //     url: 'http://api.ying.com/api/index',
+    //     async: false,
+    //     success: function (res) {
+    //         // console.log(res);
+    //         admin = res;
+    //     },
+    //     error:function(res) {
+            
+    //     }
+    // });
     // 验证登录
 		// isApiLogin();
   </script>
